@@ -26,6 +26,9 @@ version ? (????-??-??):
   - BTS#0000467 lms-arping: setting lastonline time after scanning, not at 
     the end of script execution (alec)
   - added %cid variable in lms-notify and lms-notify-sms (alec)
+  - BTS#0000591: fixed problems with octet-format mask in IP checking 
+    procedures for 'allow_from' option and users authorization (alec)
+  - improved getnetaddr(), and getbraddr() functions (alec)
 
 version 1.9.2 Thanos (2006-07-15):
   
